Remove examples
These haven't worked for years, and we've kinda torn out most of the
features they used anyway.